--- a/index.html
+++ b/index.html
@@ -616,26 +616,27 @@
     
                 <div id="dossiersPage" class="hidden">
                      <div class="container mx-auto">
-                        <div class="sticky top-16 z-10 bg-gray-100 py-4 mb-6">
-                            <header>
-                                <div class="flex justify-between items-center">
-                                    <div>
-                                        <h1 class="text-3xl font-bold text-gray-900">Suivi des Dossiers d'Accident</h1>
-                                        <p class="text-gray-600 mt-1">Tableau de bord pour le suivi des missions des agents.</p>
-                                    </div>
-                                    <div class="flex space-x-2">
-                                        <button id="importBtn" class="hidden bg-white text-gray-700 font-bold py-2 px-4 rounded-lg hover:bg-gray-100 transition-colors duration-300 flex items-center shadow-sm border border-gray-300">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z" clip-rule="evenodd" /></svg>
-                                            Importer
-                                        </button>
-                                        <button id="addTaskBtn" class="hidden bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300 flex items-center shadow-sm">
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" /></svg>
-                                            Ajouter Dossier
-                                        </button>
-                                    </div>
+<header class="mb-8">
+                            <div class="flex justify-between items-center">
+                                <div>
+                                    <h1 class="text-3xl font-bold text-gray-900">Suivi des Dossiers d'Accident</h1>
+                                    <p class="text-gray-600 mt-1">Tableau de bord pour le suivi des missions des agents.</p>
                                 </div>
-                            </header>
-                            <div class="p-4 bg-white rounded-xl shadow-sm border border-gray-200 mt-4">
+                                <div class="flex space-x-2">
+                                    <button id="importBtn" class="hidden bg-white text-gray-700 font-bold py-2 px-4 rounded-lg hover:bg-gray-100 transition-colors duration-300 flex items-center shadow-sm border border-gray-300">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z" clip-rule="evenodd" /></svg>
+                                        Importer
+                                    </button>
+                                    <button id="addTaskBtn" class="hidden bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors duration-300 flex items-center shadow-sm">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" /></svg>
+                                        Ajouter Dossier
+                                    </button>
+                                </div>
+                            </div>
+                        </header>
+
+                        <div class="sticky top-16 z-10 bg-gray-100 py-4 mb-6">
+                            <div class="p-4 bg-white rounded-xl shadow-sm border border-gray-200">
                                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4">
                                     <div class="lg:col-span-2">
                                         <label for="search" class="sr-only">Rechercher</label>
