--- a/index.html
+++ b/index.html
@@ -635,42 +635,40 @@
                             </div>
                         </header>
 
-                        <div class="sticky top-16 z-10 bg-gray-100 py-4 mb-6">
-                            <div class="p-4 bg-white rounded-xl shadow-sm border border-gray-200">
-                                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4">
-                                    <div class="lg:col-span-2">
-                                        <label for="search" class="sr-only">Rechercher</label>
-                                        <input type="text" id="search" placeholder="Rechercher par Réf, Assuré, Matricule..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
-                                    </div>
-                                    <div>
-                                        <label for="agentFilter" class="sr-only">Filtrer par agent</label>
-                                        <select id="agentFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition agent-dropdown">
-                                            <option value="all">Tous les agents</option>
-                                        </select>
-                                    </div>
-                                    <div>
-                                        <label for="companyFilter" class="sr-only">Filtrer par compagnie</label>
-                                        <select id="companyFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
-                                            <option value="all">Toutes les compagnies</option>
-                                        </select>
-                                    </div>
-                                    <div>
-                                        <label for="monthFilter" class="sr-only">Filtrer par mois</label>
-                                        <select id="monthFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
-                                            <option value="all">Tous les mois</option>
-                                        </select>
-                                    </div>
-                                    <div class="sm:col-span-2 lg:col-span-1">
-                                        <label for="statusFilter" class="sr-only">Filtrer par statut</label>
-                                        <select id="statusFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
-                                            <option value="all">Tous les statuts</option>
-                                            <option value="Terminé">Terminé</option>
-                                            <option value="inachevee">En cours</option>
-                                            <option value="À faire">À faire</option>
-                                            <option value="Annulé">Annulé</option>
-                                            <option value="48hOverdue" class="text-red-600 font-medium">En Retard (48h)</option>
-                                        </select>
-                                    </div>
+                        <div class="sticky top-16 z-10 p-4 bg-white rounded-xl shadow-sm border border-gray-200 mb-6">
+                            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4">
+                                <div class="lg:col-span-2">
+                                    <label for="search" class="sr-only">Rechercher</label>
+                                    <input type="text" id="search" placeholder="Rechercher par Réf, Assuré, Matricule..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+                                </div>
+                                <div>
+                                    <label for="agentFilter" class="sr-only">Filtrer par agent</label>
+                                    <select id="agentFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition agent-dropdown">
+                                        <option value="all">Tous les agents</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="companyFilter" class="sr-only">Filtrer par compagnie</label>
+                                    <select id="companyFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+                                        <option value="all">Toutes les compagnies</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="monthFilter" class="sr-only">Filtrer par mois</label>
+                                    <select id="monthFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+                                        <option value="all">Tous les mois</option>
+                                    </select>
+                                </div>
+                                <div class="sm:col-span-2 lg:col-span-1">
+                                    <label for="statusFilter" class="sr-only">Filtrer par statut</label>
+                                    <select id="statusFilter" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+                                        <option value="all">Tous les statuts</option>
+                                        <option value="Terminé">Terminé</option>
+                                        <option value="inachevee">En cours</option>
+                                        <option value="À faire">À faire</option>
+                                        <option value="Annulé">Annulé</option>
+                                        <option value="48hOverdue" class="text-red-600 font-medium">En Retard (48h)</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
