--- a/index.html
+++ b/index.html
@@ -697,8 +697,7 @@
         </div>
     </header>
 
-    <div id="tachesFilterBar" class="sticky top-16 z-10 p-3 bg-white rounded-xl border border-gray-200 grid grid-cols-2 md:grid-cols-5 gap-3 items-center mb-6 shadow-sm">
-        <div class="col-span-2 md:col-span-1">
+<div id="tachesFilterBar" class="lg:sticky top-16 z-10 p-3 bg-white rounded-xl border border-gray-200 grid grid-cols-2 md:grid-cols-5 gap-3 items-center mb-6 shadow-sm">        <div class="col-span-2 md:col-span-1">
             <label for="tachesAgentFilter" class="block text-xs font-medium text-gray-500">Agent</label>
             <select id="tachesAgentFilter" class="mt-1 w-full border-gray-300 rounded-lg shadow-sm text-sm agent-dropdown">
                 <option value="all">Tous les agents</option>
